Added action reserve history by table
