# internal/controller/reserveGet.go
@@ -13,11 +13,11 @@ import (
 // @Description  Get reserve
 // @Tags         reserve
 // @Produce      json
-// @Success      200  {object}  reserve.Reserve       "Success"
-// @Failure      400  {object}  server.ResponseError  "Invalid data"
-// @Failure      401  {object}  server.ResponseError  "Access Denied"
-// @Failure      422  {object}  server.ResponseError  "Not exist"
-// @Failure      500  {object}  server.ResponseError  "Internal Server Error"
+// @Param        reserve-id  path      string                true  "reserve-id"
+// @Success      200         {object}  reserve.Reserve       "Success"
+// @Failure      400         {object}  server.ResponseError  "Invalid data"
+// @Failure      401         {object}  server.ResponseError  "Access Denied"
+// @Failure      500         {object}  server.ResponseError  "Internal Server Error"
 // @Router       /reserve/{reserve-id} [get]
 func (controller *Controller) reserveGet(c *gin.Context) {
 	reserveId, err := reserve.ParseId(c.Param("reserve-id"))
